kubernetes/04-frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: frontend-deployment
  namespace: skillpulse-ns
  labels:
    app: frontend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels: 
        app: frontend
    spec:
      containers:
        - name: frontend
          image: hiimanshupawar/skillpulse-frontend:latest
          ports:
            - containerPort: 80
