kubernetes/04-nginx_deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: nginx-deployment
  namespace: skillpulse-ns
  labels:
    app: nginx

spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels: 
        app: nginx      
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
