kubernetes/10-statefulSet.yml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: skillpulse-statefulset
  namespace: skillpulse-ns
  labels:
    app: mysql

spec:
  serviceName: "mysql-service"
  selector:
    matchLabels:
      app: mysql
  replicas: 1


  template:
    metadata:
      labels:
        app: mysql

    spec:
      containers:
      - name: mysql-container
        image: mysql:8.4
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-vol
          mountPath: /var/lib/mysql
        - name: mysql-init-volume
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-init-volume
        configMap:
          name: mysql-init-configmap


  volumeClaimTemplates:
  - metadata: 
      name: mysql-vol
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "standard"
      resources:
        requests:
          storage: 5Gi
