kubernetes/05-frontend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: skillpulse-ns

spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 80
