kubernetes/07-backend-service.yml
kind: Service
apiVersion: v1
metadata:
  name: backend-service
  namespace: skillpulse-ns

spec:
  selector:
    app: backend
  ports:  
    - protocol: TCP
      port: 8080
      targetPort: 8080
