kubernetes/11-mysql-service.yml
kind: Service 
apiVersion: v1  

metadata:
  name: mysql-service
  namespace: skillpulse-ns
  
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
